--- a/src/index.html
+++ b/src/index.html
@@ -18,23 +18,23 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
 
   <!-- Icons -->
-  <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/fontawesome.css">
 
   <!--Slick slider css-->
-  <link rel="stylesheet" type="text/css" href="../assets/css/slick.css">
-  <link rel="stylesheet" type="text/css" href="../assets/css/slick-theme.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/slick.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/slick-theme.css">
 
   <!-- Animate icon -->
-  <link rel="stylesheet" type="text/css" href="../assets/css/animate.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/animate.css">
 
   <!-- Themify icon -->
-  <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/themify-icons.css">
 
   <!-- Bootstrap css -->
-  <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
 
   <!-- Theme css -->
-  <link rel="stylesheet" type="text/css" href="../assets/css/color14.css" media="screen" id="color">
+  <link rel="stylesheet" type="text/css" href="/assets/css/color14.css" media="screen" id="color">
 </head>
 <body>
   <app-root></app-root>
