--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,49 @@
 
   <!-- Theme css -->
   <link rel="stylesheet" type="text/css" href="/assets/css/color14.css" media="screen" id="color">
+      <!-- Google font-->
+      <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+      <!-- Font Awesome-->
+      <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+
+      <!-- Flag icon-->
+      <link rel="stylesheet" type="text/css" href="../assets/css/flag-icon.css">
+
+      <!-- ico-font-->
+      <link rel="stylesheet" type="text/css" href="../assets/css/icofont.css">
+
+      <!-- Prism css-->
+      <link rel="stylesheet" type="text/css" href="../assets/css/prism.css">
+
+      <!-- Chartist css -->
+      <link rel="stylesheet" type="text/css" href="../assets/css/chartist.css">
+
+      <!-- Bootstrap css-->
+      <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+
+      <!-- App css-->
+      <link rel="stylesheet" type="text/css" href="../assets/css/admin.css">
+
+       <!-- Google font-->
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+    <!-- Font Awesome-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+
+    <!-- Flag icon-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/flag-icon.css">
+
+    <!-- Bootstrap css-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+
+    <!-- App css-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/admin.css">
 </head>
 <body>
   <app-root></app-root>
+
 </body>
 </html>
