--- a/src/index.html
+++ b/src/index.html
@@ -1,101 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>FilRougeFront</title>
-  <base href="/">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="multikart">
-  <meta name="keywords" content="multikart">
-  <meta name="author" content="multikart">
-  <link rel="icon" href="../assets/images/favicon/14.png" type="image/x-icon" />
-  <link rel="shortcut icon" href="../assets/images/favicon/14.png" type="image/x-icon" />
-  <title>Projet Fil rouge - Original thé et Café - Site E-commerce</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>FilRougeFront</title>
+    <base href="/" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="multikart" />
+    <meta name="keywords" content="multikart" />
+    <meta name="author" content="multikart" />
+    <link rel="icon" href="../assets/images/favicon/14.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="../assets/images/favicon/14.png"type="image/x-icon"/>
+    <title>Projet Fil rouge - Original thé et Café - Site E-commerce</title>
 
-  <!--Google font-->
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <!-- Icons -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/fontawesome.css" />
 
-  <!-- Icons -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/fontawesome.css">
+    <!--Slick slider css-->
+    <link rel="stylesheet" type="text/css" href="/assets/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/slick-theme.css" />
 
-  <!--Slick slider css-->
-  <link rel="stylesheet" type="text/css" href="/assets/css/slick.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/slick-theme.css">
+    <!-- Animate icon -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" />
 
-  <!-- Animate icon -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/animate.css">
+    <!-- Themify icon -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/themify-icons.css" />
 
-  <!-- Themify icon -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/themify-icons.css">
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css" />
 
-  <!-- Bootstrap css -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
-
-  <!-- Theme css -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/color14.css" media="screen" id="color">
-      <!-- Google font-->
-      <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-      <!-- Font Awesome-->
-      <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
-
-      <!-- Flag icon-->
-      <link rel="stylesheet" type="text/css" href="../assets/css/flag-icon.css">
-
-      <!-- ico-font-->
-      <link rel="stylesheet" type="text/css" href="../assets/css/icofont.css">
-
-      <!-- Prism css-->
-      <link rel="stylesheet" type="text/css" href="../assets/css/prism.css">
-
-      <!-- Chartist css -->
-      <link rel="stylesheet" type="text/css" href="../assets/css/chartist.css">
-
-      <!-- Bootstrap css-->
-      <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
-
-      <!-- App css-->
-      <link rel="stylesheet" type="text/css" href="../assets/css/admin.css">
-
-       <!-- Google font-->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
-    <!-- Font Awesome-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
-
-    <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/flag-icon.css">
-
-    <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
-
-    <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/admin.css">
+    <!-- Theme css -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/color14.css" media="screen" id="color" />
 
     <!-- Google font-->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900"rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
 
     <!-- Font Awesome-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/flag-icon.css"/>
 
-    <!-- Datatables css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/datatables.css">
+    <!-- ico-font-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/icofont.css"/>
 
-    <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+    <!-- Prism css-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/prism.css"/>
+
+    <!-- Chartist css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/chartist.css"/>
 
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/admin.css">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <link rel="stylesheet" type="text/css" href="../assets/css/admin.css"/>
+
+    <!-- Datatables css-->
+    <link rel="stylesheet"type="text/css"href="../assets/css/datatables.css"/>
+
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
